--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-.tête
+ul
 {
     display: flex;
-    
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: black;
+    color: white;
+    list-style-type: none;
+    padding: 150px;
+}
+
+#div-2
+{
+    background-color: white;
 }
